# scr33ny

./: Cargo.toml  README.md  config.toml.example
.github/workflows/: ci.yml  release.yml
docs/: README.md  config.md
src/: app.rs  canvas.rs  config.rs  main.rs
src/screensaver/: blank.rs  gif.rs  image_ss.rs  mod.rs  text.rs
src/widget/: clock.rs  date.rs  mod.rs  weather.rs
